--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -63,3 +63,14 @@ div:focus {
 .app-container {
   padding: 20px;
 }
+
+div.border-line {
+  width: 100%;
+  height: 0;
+  border-top: 1px solid #eee;
+}
+div.border-dashed {
+  width: 100%;
+  height: 0;
+  border-top: 1px dashed #eee;
+}
