--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -102,3 +102,17 @@ div.border-dashed {
 .margin-right-10 {
   margin-right: 10px
 }
+
+.app-input-small {
+  width: 33%;
+}
+
+.app-input-small {
+  width: 10%;
+}
+.app-input-base {
+  width: 30%;
+}
+.app-input-medium {
+  width: 50%;
+}
