新增商品分类、规格模板

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -116,3 +116,10 @@ div.border-dashed {
 .app-input-medium {
   width: 50%;
 }
+.app-form-image {
+  width: 100px;
+  height: 100px;
+}
+.app-form-image-place {
+  font-size: 100px;
+}
